--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ dblp_url: https://dblp.org/pid/186/7985.html # your DBLP profile url
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
 
-google_analytics: UA-61586501-2 # out your google-analytics code
+google_analytics: G-EZ1VSK8DQ8 # out your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 
 # -----------------------------------------------------------------------------
